storybook static generado

--- a/storybook-static/iframe.html
+++ b/storybook-static/iframe.html
@@ -505,7 +505,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-l_vrLt35.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-DJM8Baqu.js"></script>
   </head>
 
   <body>
